// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"exclude" option matches snapshot for a single \`exclude\` value ({RegExp}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "async.async.js?ver=8b644dc8a959875e39cf",
    193,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "main.js.gz",
    3984,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3984,
    },
  ],
  Array [
    "main.js?var=8b644dc8a959875e39cf",
    15988,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15988,
    },
  ],
]
`;

exports[`"exclude" option matches snapshot for a single \`exclude\` value ({RegExp}): errors 1`] = `Array []`;

exports[`"exclude" option matches snapshot for a single \`exclude\` value ({RegExp}): warnings 1`] = `Array []`;

exports[`"exclude" option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "async.async.js?ver=8b644dc8a959875e39cf",
    193,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "main.js.gz",
    3984,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3984,
    },
  ],
  Array [
    "main.js?var=8b644dc8a959875e39cf",
    15988,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15988,
    },
  ],
]
`;

exports[`"exclude" option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): errors 1`] = `Array []`;

exports[`"exclude" option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): warnings 1`] = `Array []`;
